[package]
name = "simple_login"
version = "0.1.0"
authors = ["Oluseun Aminu <seun.aminujoshua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "3"
actix-rt = "1.0"
listenfd = "0.3"
futures = "0.3.8"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.15.0"